# python-ai-tutor

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  pyproject.toml  pytest.ini  pythonTutorSpecs.md  test_progress.db
.claude/: settings.local.json
curriculum/: conditionals.json  dictionaries.json  error_handling.json  functions.json  lists.json  loops.json  variables.json
requirements/: base.in  base.txt  dev.in  dev.txt
routes/: api.py  learning.py
src/python_ai_tutor/: __init__.py  challenge_system.py  cli.py  code_editor.py  code_executor.py  curriculum_engine.py  interactive_cli.py  interactive_session.py  models.py  progress_persistence.py  psychological_engine.py  socratic_engine.py  visual_formatter.py
static/: app.js  style.css
templates/: base.html  dashboard.html  index.html  lesson.html
templates/components/: code_editor.html
tests/: __init__.py  test_web_app.py
tests/integration/: test_curriculum_integration.py
tests/unit/: test_code_editor.py  test_code_executor.py  test_curriculum_engine.py  test_progress_persistence.py  test_socratic_engine.py
user_data/: progress.db  test.db
